// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When logged in It renders correctly 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-dark bg-dark"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      Universe
    </a>
    <button
      aria-controls="navbarSupportedContent"
      aria-expanded="false"
      aria-label="Toggle Navigation"
      class="navbar-toggler"
      data-target="#navbarSupportedContent"
      data-toggle="collapse"
      type="button"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <div
      class="collapse navbar-collapse"
      id="navbarSupportedContent"
    >
      <ul
        class="navbar-nav ml-auto"
      >
        <li
          class="nav-item dropdown"
        >
          <a
            aria-expanded="false"
            aria-haspopup="true"
            class="nav-link dropdown-toggle"
            data-toggle="dropdown"
            href="/"
            id="navbarDropdown"
            role="button"
          >
            Test User
          </a>
          <div
            aria-labelledby="navbarDropdown"
            class="dropdown-menu"
          >
            <a
              class="dropdown-item"
              href="/profile"
            >
              Profile
            </a>
            <div
              class="dropdown-divider"
            />
            <a
              class="dropdown-item"
              href="/login"
            >
              Log Out
            </a>
          </div>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`When not logged in It renders correctly 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-dark bg-dark"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      Universe
    </a>
    <button
      aria-controls="navbarSupportedContent"
      aria-expanded="false"
      aria-label="Toggle Navigation"
      class="navbar-toggler"
      data-target="#navbarSupportedContent"
      data-toggle="collapse"
      type="button"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <div
      class="collapse navbar-collapse"
      id="navbarSupportedContent"
    >
      <ul
        class="navbar-nav ml-auto"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/login"
          >
            Login / Register
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
